--- a/activator.properties
+++ b/activator.properties
@@ -2,4 +2,5 @@ name=play-scalajs
 title=Play Framework with ScalaJS
 description=A starter application with Play Framework and ScalaJS.
 tags=playframework,scala,scalajs
+authorName=Kirill A. Korinsky
 
